k8s/authentik/07_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-server
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.keindev.ru`)
      priority: 10
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: local-keindev-ru-tls
